--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -14,3 +14,10 @@ $topNav-secondaryBoxShadow: #ff8358;
 //nav-sidebar
 $sideNav-initialWidth: 4.0rem;
 $sideNav-mainColor: #2680F3;
+
+//motif titles
+$motif-title-bg: #F8F991;
+$motif-title-color: black;
+
+//main page
+$main-bg-color:#9AB87A
