--- a/css/navigationBar.css
+++ b/css/navigationBar.css
@@ -13,9 +13,10 @@ ul {
   z-index: 3;
   width: 100%;
   height: 80px;
+  top: 0;
   margin: 0 0 10px 0;
   padding: 0 10px;
-  position: relative;
+  position: fixed;
   background: #fafafa;
   font-family: "Lato", sans-serif;
   box-shadow: 0 1px 1px 0 #DDDDDD; }
