--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -20,4 +20,12 @@ $motif-title-bg: #F8F991;
 $motif-title-color: black;
 
 //main page
-$main-bg-color:#9AB87A
+$main-bg-color:#9AB87A;
+$search-color: white;
+
+//P-slider slider
+$slider-pips-col: #0F0A0A;
+$slider-connect-bg:#537258;
+$slider-marker-bg: #0F0A0A;
+
+$tooltip-container-bg: #F8F991;
