--- a/css/mainPage.scss
+++ b/css/mainPage.scss
@@ -2,31 +2,9 @@
 @import "utilities/variables";
 
 // from sidenav.scss
-$sidebar-initial-width: 3.5rem;
+//$sidebar-initial-width: 3.5rem;
 
 // Options
-
-
-:root {
-  --hoover-bg-color: #436449;
-  --active-bg-color: #436449;
-
-  --button-bg-color: #537258;
-  --button-color: white;
-
-  --search-bg-color: #537258;
-  --search-color: white;
-
-  --slider-connect-bg:#537258;
-  --slider-pips-col: #0F0A0A;
-  --slider-marker-bg: #0F0A0A;
-
-  --motif-title-bg: #F8F991;
-  --motif-title-color: black;
-
-  --tooltip-container-bg: #F8F991;
-}
-
 html {
   height: 100%;
 }
