--- a/css/UIComponents.scss
+++ b/css/UIComponents.scss
@@ -3,7 +3,7 @@
 #motif-list-cmp {
   /*Positioning*/
   /* Default media < 800px - two line menu */
-  margin-top: 2 * $topNav-navLineHeight;
+  margin-top: 2 * $topNav-navLineHeight + 10px;
   #motif-list {
     height: 80px;
     overflow-y: scroll;
@@ -41,8 +41,8 @@
 
     .chosen-motif {
       display: inline-block;
-      margin: 0 10px 0 10px;
-      background-color: #F8F991;
+      margin: 0 10px 10px 10px;
+      background-color: $motif-in-result-bg;
       border-radius: 5px;
       padding: 2px 8px 2px 2px;
 
@@ -50,19 +50,26 @@
         display: inline-block;
         padding: 4px;
         margin: 4px;
+        vertical-align: middle;
 
-        background-color: $motif-title-bg;
+        background-color: $motif-in-result-round-bg;
         border-radius: 10px;
-        border: 1px solid black;
+        border: none; // 1px solid black;
 
         font-family: "Gotham Rounded SSm A","Gotham Rounded SSm B";
         font-size: 16px;
         color: $motif-title-color;
       }
+
+      .sp-replacer {
+        border-radius: inherit;
+        border: none; //1px solid black;
+        background-color: $motif-in-result-round-bg;
+      }
     }
 
     .motif-result-hover {
-      background-color: salmon;
+      background-color: $motif-selected-on-result-hover;
     }
   }
 
@@ -76,6 +83,6 @@
   #motif-list-cmp {
     /*Positioning*/
     /* Default media > 800px - one line menu */
-    margin-top: 1 * $topNav-navLineHeight;
+    margin-top: $topNav-navLineHeight + 10px;
   }
 }
