--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -5,7 +5,7 @@ html {
 body {
   height: 100%;
   margin: 0;
-  background-color: #9AB87A; }
+  background-color: #dadada; }
 
 * {
   -webkit-box-sizing: border-box;
