--- a/css/resultContainer.css
+++ b/css/resultContainer.css
@@ -3,7 +3,7 @@
   height: 50px;
   padding: 5px;
   margin-top: 5px;
-  background-color: #F8F991;
+  background-color: white;
   border-bottom: dashed 1px;
   vertical-align: middle; }
 
