--- a/css/navigationBar.css
+++ b/css/navigationBar.css
@@ -17,9 +17,9 @@ ul {
   margin: 0 0 10px 0;
   padding: 0 10px;
   position: fixed;
-  background: #fafafa;
+  background: #ededf2;
   font-family: "Lato", sans-serif;
-  box-shadow: 0 1px 1px 0 #DDDDDD; }
+  box-shadow: 0 1px 1px 0 white; }
   .nav-bar > .the-nav {
     height: 80px; }
 
@@ -35,7 +35,7 @@ ul {
     .nav > li > a {
       padding: 10px 10px;
       display: inline-block;
-      color: #A7A7A7;
+      color: #797979;
       font-weight: 500;
       text-align: center;
       text-decoration: none; }
@@ -55,14 +55,14 @@ ul {
       display: none;
       width: 180px;
       min-width: 150px;
-      box-shadow: 0 1px 1px 0 #DDDDDD;
-      background-color: #fafafa;
+      box-shadow: 0 1px 1px 0 white;
+      background-color: #ededf2;
       z-index: 1;
       border-radius: 5px; }
       .nav > li > .sub-nav > li a {
         display: block;
         padding: 10px 10px;
-        color: #A7A7A7;
+        color: #797979;
         text-decoration: none; }
   .nav > .search-container {
     padding: 10px 24px 10px 10px; }
@@ -75,8 +75,8 @@ ul {
       -moz-border-radius: 5px;
       border-radius: 5px;
       outline: none;
-      background: #fafafa;
-      color: #303030;
+      background: #ededf2;
+      color: #797979;
       font-size: 15px; }
 
 /* Active State */
@@ -93,7 +93,7 @@ ul {
 .nav > li > .sub-nav > li:hover a {
   background: #ff8358;
   box-shadow: 0 1px 1px 0 #ff8358;
-  color: #fafafa;
+  color: #ededf2;
   border-radius: 5px; }
 
 .pull-left {
