--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -18,7 +18,7 @@ $sideNav-mainColor: #2680F3;
 //motif titles
 $motif-title-bg: white;
 $motif-title-color: black;
-$motif-in-result-bg: #dadada;
+$motif-in-result-bg: white;
 $motif-in-result-round-bg: white;
 $motif-selected-on-result-hover: salmon;
 
