--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -29,16 +29,16 @@
   #motif-list-selected-cmp #motif-list-selected .chosen-motif {
     display: inline-block;
     margin: 0 10px 10px 10px;
-    background-color: #dadada;
-    border-radius: 5px;
-    padding: 2px 8px 2px 2px; }
+    padding: 2px 8px 2px 2px;
+    border-radius: 10px;
+    border: 1px solid black;
+    background-color: white; }
     #motif-list-selected-cmp #motif-list-selected .chosen-motif .motif-title {
       display: inline-block;
       padding: 4px;
       margin: 4px;
       vertical-align: middle;
       background-color: white;
-      border-radius: 10px;
       border: none;
       font-family: "Gotham Rounded SSm A","Gotham Rounded SSm B";
       font-size: 16px;
