--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -21,6 +21,8 @@ $motif-title-color: black;
 $motif-in-result-bg: white;
 $motif-in-result-round-bg: white;
 $motif-selected-on-result-hover: salmon;
+$motif-title-matched-suggestion: salmon;
+
 
 //main page
 $main-bg-color: #dadada;
