--- a/css/navigationBar.scss
+++ b/css/navigationBar.scss
@@ -84,6 +84,7 @@ ul {
   /* Search input */
   > .search-container {
     padding: 10px 24px 10px 10px;
+    margin-left: $sideNav-initialWidth * 0.90;
 
     > #search {
       display: inline-block;
@@ -107,15 +108,11 @@ ul {
 .nav > li:hover {
   > a {
     color: #303030;
-  }
 
-  > a:active {
-    color: red;
-  }
-
-  > a > .caret {
-    border-top-color: #303030;
-    border-bottom-color: #303030;
+    > .caret {
+      border-top-color: #303030;
+      border-bottom-color: #303030;
+    }
   }
 
   > .sub-nav {
@@ -138,8 +135,7 @@ ul {
   -moz-border-radius: 5px;
   border-radius: 5px;
 }
-.top-second {top: $topNav-navLineHeight
-}
+.top-second {top: $topNav-navLineHeight}
 .top-first {top: 0;}
 
 //////////////////
@@ -171,7 +167,7 @@ ul {
   .top-first{
     position: absolute;
     > .search-container {
-      min-width: 380px;
+      min-width: 500px;
     }
   }
   .top-second {
