--- a/css/navigationTopBar.css
+++ b/css/navigationTopBar.css
@@ -153,4 +153,4 @@ ul {
       .nav-bar > .the-nav > .top-second {
         position: static; } }
 
-/*# sourceMappingURL=navigationBar.css.map */
+/*# sourceMappingURL=navigationTopBar.csscss.map */
