-new folder -some bug fixes -tooltips excluded

--- a/css/navigationTopBar.css
+++ b/css/navigationTopBar.css
@@ -153,4 +153,4 @@ ul {
       .nav-bar > .the-nav > .top-second {
         position: static; } }
 
-/*# sourceMappingURL=navigationTopBar.csscss.map */
+/*# sourceMappingURL=navigationTopBar.css.map */
