--- a/css/primaryComponentsSettings.scss
+++ b/css/primaryComponentsSettings.scss
@@ -1,7 +1,6 @@
 /* color palette http://paletton.com/#uid=30A0e0kmcsrbjzrhHuar+sQvap-*/
 @import "utilities/variables";
 
-// from navigationSideBar.scss
 
 // Options
 * {
@@ -25,17 +24,52 @@ body {
   margin-top: 2 * $topNav-navLineHeight + 10px;
 }
 
-#sequence-input, #result, #tooltip-container{
+#sequence-input, #result {
   border: 2px solid black;
 }
 
+
+
+.icon {
+  color: $icon-default-color;
+}
+.icon:hover {
+  color: $icon-hover-color;
+}
+.icon:active {
+  color: $icon-active-color;
+}
+.icon-medium{
+  font-size: 32px;
+}
+
+
 .interface-component {
   padding: 0 10px 0 10px;
+  margin-bottom: 15px;
+}
+
+.interface-button {
+  position: relative;
+  display: inline-block;
+  box-sizing: border-box;
+  margin-right: 0.333em;
+  padding: 0.5em 1em;
+  border: 1px solid #999;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 0.88em;
+  color: black;
+  white-space: nowrap;
+  overflow: hidden;
+  background-color:#e9e9e9
 }
 
 .round {
   border-radius: 5px;
 }
+
+
 
 /* Media for larger devices */
 @media screen and (min-width: 800px) {
