--- a/css/resultAndSeqInput.css
+++ b/css/resultAndSeqInput.css
@@ -1,3 +1,4 @@
+/*
 .segment {
     border-radius: 2px;
 
@@ -55,7 +56,6 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-
-    border-top: none;
 }
 
+*/
