--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -34,3 +34,9 @@ $slider-pips-col: #797979;
 $slider-marker-bg: #797979;
 
 $tooltip-container-bg: white;
+
+//buttons
+$icon-default-color: black;
+$icon-hover-color: #797979;
+$icon-active-color: #a3a3a3;
+
