--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -39,4 +39,5 @@ $tooltip-container-bg: white;
 $icon-default-color: black;
 $icon-hover-color: #797979;
 $icon-active-color: #a3a3a3;
+$button-bg: $topNav-primaryMenuBackground;
 
