--- a/css/primaryComponentsSettings.css
+++ b/css/primaryComponentsSettings.css
@@ -19,17 +19,25 @@ body {
 #sequence-input, #result {
   border: 2px solid black; }
 
-.icon {
+.interface-button {
   color: black; }
 
-.icon:hover {
+.interface-button:hover {
   color: #797979; }
 
-.icon:active {
+.interface-button:active {
   color: #a3a3a3; }
 
 .icon-medium {
-  font-size: 32px; }
+  font-size: 1em; }
+
+input.file_input_with_replacement {
+  display: none; }
+
+input.file_input_replacement {
+  background: #ededf2;
+  padding: 10px;
+  border: none; }
 
 .interface-component {
   padding: 0 10px 0 10px;
@@ -48,7 +56,8 @@ body {
   color: black;
   white-space: nowrap;
   overflow: hidden;
-  background-color: #e9e9e9; }
+  background-color: #e9e9e9;
+  text-decoration: none; }
 
 .round {
   border-radius: 5px; }
