-test commit from ubuntu16

--- a/css/primaryComponentsSettings.css
+++ b/css/primaryComponentsSettings.css
@@ -20,7 +20,21 @@ body {
   border: 2px solid black; }
 
 .interface-button {
-  color: black; }
+  color: black;
+  background-color: #e9e9e9;
+  border: 1px solid #999;
+  border-radius: 5px;
+  position: relative;
+  display: inline-block;
+  margin-right: 0.333em;
+  padding: 0.5em 1em;
+  cursor: pointer;
+  font-size: 0.88em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-decoration: none; }
+  .interface-button > #fileInput {
+    height: 17px; }
 
 .interface-button:hover {
   color: #797979; }
@@ -28,36 +42,9 @@ body {
 .interface-button:active {
   color: #a3a3a3; }
 
-.icon-medium {
-  font-size: 1em; }
-
-input.file_input_with_replacement {
-  display: none; }
-
-input.file_input_replacement {
-  background: #ededf2;
-  padding: 10px;
-  border: none; }
-
 .interface-component {
   padding: 0 10px 0 10px;
   margin-bottom: 15px; }
-
-.interface-button {
-  position: relative;
-  display: inline-block;
-  box-sizing: border-box;
-  margin-right: 0.333em;
-  padding: 0.5em 1em;
-  border: 1px solid #999;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 0.88em;
-  color: black;
-  white-space: nowrap;
-  overflow: hidden;
-  background-color: #e9e9e9;
-  text-decoration: none; }
 
 .round {
   border-radius: 5px; }
