--- a/css/primaryComponentsSettings.css
+++ b/css/primaryComponentsSettings.css
@@ -26,6 +26,7 @@ body {
   border-radius: 5px;
   position: relative;
   display: inline-block;
+  line-height: 30px;
   margin-right: 0.333em;
   padding: 0.5em 1em;
   cursor: pointer;
@@ -33,8 +34,6 @@ body {
   white-space: nowrap;
   overflow: hidden;
   text-decoration: none; }
-  .interface-button > #fileInput {
-    height: 17px; }
 
 .interface-button:hover {
   color: #797979; }
