--- a/css/primaryComponentsSettings.scss
+++ b/css/primaryComponentsSettings.scss
@@ -30,6 +30,7 @@ body {
 
 .interface-button {
   color: $icon-default-color;
+
   background-color:#e9e9e9;
   border: 1px solid #999;
   border-radius: 5px;
@@ -37,6 +38,7 @@ body {
   position: relative;
   display: inline-block;
 
+  line-height: 30px;
   margin-right: 0.333em;
   padding: 0.5em 1em;
 
@@ -47,9 +49,6 @@ body {
 
   text-decoration: none;
 
-  >#fileInput {
-    height: 17px;
-  }
 }
 
 .interface-button:hover {
