--- a/css/resultContainer.scss
+++ b/css/resultContainer.scss
@@ -54,3 +54,21 @@
   border-top: solid salmon 4px;
   border-bottom: solid salmon 4px;
 }
+
+//toggled classes
+.full-screen {
+  height: 80vh !important;
+}
+
+.flattened {
+  line-height: 3em !important;
+  height: 3em !important;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  word-wrap: normal;
+  text-align: center;
+}
+
+.hidden {
+  display: none;
+}
