--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -41,3 +41,6 @@ $icon-hover-color: #797979;
 $icon-active-color: #a3a3a3;
 $button-bg: $topNav-primaryMenuBackground;
 
+//global features
+$border-radius: 5px;
+
