--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -57,6 +57,7 @@
         vertical-align: middle;
         background-color: white;
         border: none;
+        border-radius: 5px;
         font-family: "Gotham Rounded SSm A","Gotham Rounded SSm B";
         font-size: 16px;
         color: black; }
@@ -64,7 +65,7 @@
         border-radius: inherit;
         border: none;
         background-color: white; }
-    #motif-list-selected-cmp #motif-list-selected .motif-result-hover {
+    #motif-list-selected-cmp #motif-list-selected .motif-result-hover .motif-title {
       background-color: salmon; }
   #motif-list-selected-cmp #motif-list-selected:empty {
     display: none; }
