--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -70,4 +70,21 @@
   #motif-list-selected-cmp #motif-list-selected:empty {
     display: none; }
 
+#sequence-input-cmp {
+  background-color: #ededf2;
+  padding: 10px 10px 10px 10px; }
+  #sequence-input-cmp #sequence-tabs ul.tabs {
+    margin: 0px;
+    padding: 0px;
+    list-style: none; }
+  #sequence-input-cmp #sequence-tabs ul.tabs li {
+    background: none;
+    color: #222;
+    display: inline-block;
+    padding: 10px 15px;
+    cursor: pointer; }
+  #sequence-input-cmp #sequence-tabs ul.tabs li.current-tab {
+    background: #ededed;
+    color: #222; }
+
 /*# sourceMappingURL=UIComponents.css.map */
