--- a/css/UIComponents.scss
+++ b/css/UIComponents.scss
@@ -109,3 +109,31 @@
     display: none;
   }
 }
+
+#sequence-input-cmp {
+  background-color: $topNav-primaryMenuBackground;
+  padding: 10px 10px 10px 10px;
+
+  #sequence-tabs {
+    ul.tabs {
+      margin: 0px;
+      padding: 0px;
+      list-style: none;
+    }
+
+    ul.tabs li {
+      background: none;
+      color: #222;
+      display: inline-block;
+      padding: 10px 15px;
+      cursor: pointer;
+    }
+
+    ul.tabs li.current-tab {
+      background: #ededed;
+      color: #222;
+    }
+  }
+}
+
+//Tabs
